--- a/extensions/WikidataBundle/utils/css/edit.css
+++ b/extensions/WikidataBundle/utils/css/edit.css
@@ -75,3 +75,36 @@
   margin-top: 10px;
 }
 
+.multipleTemplateInstance {
+  background-color: #dddddd;
+  border: 1px solid #cccccc;
+  padding: 5px;
+  margin: 10px 0 10px 0;
+}
+
+.multipleTemplateInstance table {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  color: inherit;
+  background-color: inherit;
+}
+
+.multipleTemplateInstance input[type="text"] {
+  font-size: 10pt;
+  padding: 1px;
+  width: 50%;
+}
+
+.removeButton {
+  background: none;
+  border: none;
+  padding: 0;
+  width: 36px;
+  height: 36px;
+  border-radius: 5px;
+}
+
+.removeButton:hover {
+  border: 1px solid #aaaaaa;
+}
