[AM-01] Correction chargement images galleries sur formulaire

--- a/skins/AtlasMuseum/resources/screen.css
+++ b/skins/AtlasMuseum/resources/screen.css
@@ -284,7 +284,8 @@ h1 > span {
 
 .homeCtnr,
 .mapCtnr {
-	font-family:"ITCFranklinGothicW02-Bk 812924";
+  font-family:"ITCFranklinGothicW02-Bk 812924";
+  overflow-wrap: break-word;
 }
 
 .homeCtnr h3,
