--- a/skins/AtlasMuseum/resources/atlasmuseum.css
+++ b/skins/AtlasMuseum/resources/atlasmuseum.css
@@ -243,6 +243,7 @@ body.page-Accueil #firstHeading{
 div.mapCtnr{
     padding: 24px 24px 40px 24px;
     border-bottom: 1px solid #E4E8EA;
+    overflow-wrap: break-word;
 }
 div.mapCtnr div.mapLgd{
     margin-bottom: 20px;
