--- a/extensions/WikidataBundle/utils/css/map.css
+++ b/extensions/WikidataBundle/utils/css/map.css
@@ -134,8 +134,16 @@
 }
 
 #map-popup-content img {
-	max-height:200px;
-	height:auto;
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  max-height: 128px;
+  margin-bottom: 10px;
+}
+
+#map-image-placeholder {
+  width: 100%;
+  height: 128px;
 }
 
 #map-popup-content li {
